# mdby

./: CLAUDE.md  Cargo.toml  README.md  ROADMAP.md
design/: architecture.md  data-model.md  mdql-grammar.md
mdql/: Cargo.toml
mdql/src/: ast.rs  error.rs  lib.rs  parser.rs
plan/: phase1-stability.md  phase2-indexing.md  phase3-git-sync.md
src/: error.rs  lib.rs  main.rs  validation.rs
src/git/: conflict.rs  mod.rs  sync.rs
src/query/: executor.rs  filter.rs  mod.rs
src/schema/: mod.rs
src/storage/: collection.rs  document.rs  frontmatter.rs  mod.rs
src/views/: mod.rs  regenerate.rs  templates.rs
tests/: integration.rs
