[package]
name = "mdby"
version = "0.1.0"
edition = "2021"
description = "A markdown-based git-backed database with MDQL query language"

[dependencies]
# Markdown parsing
pulldown-cmark = "0.10"
pulldown-cmark-to-cmark = "13"

# YAML frontmatter
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Git operations
git2 = "0.18"

# File system watching (for async view regeneration)
notify = "6.1"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI (for later)
clap = { version = "4.4", features = ["derive"] }

# Templating for views
tera = "1.19"

# Path handling
walkdir = "2.4"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# MDQL parser
mdql = { path = "mdql" }

# Regex for pattern matching
regex = "1.10"

[dev-dependencies]
tempfile = "3.10"

[workspace]
members = ["mdql"]

[[bin]]
name = "mdby"
path = "src/main.rs"
