[package]
name = "mdql"
version = "0.1.0"
edition = "2021"
description = "MDQL - Query language for MDBY markdown database"

[dependencies]
# Parser combinator for MDQL
nom = "7.1"

# For AST representation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
